# freight-data

./: .gitignore  README.md  docker-compose.yml
.devcontainer/worker_container/: devcontainer.json
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/Models/: MarkerModel.ts
client/src/components/: HeatmapLayer.tsx  LoadingElement.tsx  MapEventHandler.tsx  MapSidebar.tsx  Placeholder.tsx  PolyLines.tsx  Routes.tsx  StopMarkers.tsx
client/src/pages/: Home.tsx  VisualMap.tsx
db_worker/: .dockerignore  .env.example  .gitignore  Dockerfile  create_route_ids.sql  debug_coordinates.py  heatmap.py  load_route_data_into_db_parallel.py  load_stop_data_into_db_parallel.py  nodemon.json  package.json  requirements.txt  useful_sql_queries.py
db_worker/src/: worker.py
db_worker/src/handlers/: __init__.py  heatmap_handler.py  regular_handler.py
prisma/: schema.prisma
prisma/migrations/20250326021758_add_query_job/: migration.sql
prisma/migrations/20250401002034_add_indexes/: migration.sql
server/: .env.example  .gitignore  Dockerfile  index.ts  nodemon.json  package-lock.json  package.json
server/src/routes/: queries.ts
server/src/services/: queue.ts
worker/: .env.example  Dockerfile  nodemon.json  package-lock.json  pyproject.toml  tsconfig.json
worker/app/: __init__.py  __main__.py
