[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Colby Carter",email = "cjcarter1223@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-script (>=2.0.6,<3.0.0)",
    "google-genai (>=1.6.0,<2.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
